// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform custom include-media max-width 1`] = `
"import { css } from 'emotion';
import { variables as vars } from '@domain-group/fe-brary';

export const auctionsLabel = css\`
             display: none;

             @media media(max-width: \${vars.global.desktopMinWidth - 1}) {
               display: inline;
             }
          
\`;
"
`;

exports[`transform custom include-media min-width 1`] = `
"import { css } from 'emotion';
import { variables as vars } from '@domain-group/fe-brary';

export const auctionsLabel = css\`
             display: none;

             @media media(min-width: \${vars.global.desktopMinWidth}) {
               display: inline;
             }
          
\`;
"
`;

exports[`transform custom vars 1`] = `
"import { css } from 'emotion';
import customVars from '../variables';

export const auctionsLabel = css\`
  display: none;
  color: \${customVars.fooBarBazWhizz};
\`;
"
`;

exports[`transform custom vars in include 1`] = `
"import { css } from 'emotion';
import customVars from '../variables';

export const mapMarker = css\`
            $map-marker-arrow-size: 8px;

            &::after {
              \${simpleArrow(
    customVars.mapMarkerArrowSize,
    customVars.mapMarkerArrowSize,
    'down',
    vars.colour.white,
  )}

              margin-left: \${customVars.mapMarkerArrowSize};
            }
          
\`;
"
`;

exports[`transform mixins 1`] = `
"import { css } from 'emotion';
import { variables as vars } from '@domain-group/fe-brary';

function adExact(width, height) {
  return css\`
    width: \${width};
    height: \${height};
    color: \${vars.colour.primaryDark};
  \`;
}

export const adspot468X60728X90Pos1Container = css\`
  color: blue;
  \${adExact('125px', '700px')}
\`;
"
`;

exports[`transform mixins nested 1`] = `
"import { css } from 'emotion';
import { variables as vars } from '@domain-group/fe-brary';

function adExact(width, height) {
  return css\`
    width: \${width};
    height: \${height};

    .bar {
      color: \${vars.colour.primaryDark};
      display: flex;
      align-items: center;

      .foo {
        display: black;
        align-items: start;
      }
    }

    display: block;
  \`;
}
"
`;

exports[`transform nested class no vars 1`] = `
"import { css } from 'emotion';

export const button = css\`
  display: flex;
  align-items: center;
  justify-content: center;
\`;

export const foo = css\`
  display: block;
\`;
"
`;

exports[`transform non classname 1`] = `
"import { css } from 'emotion';

export const description = css\`
  margin-bottom: 24px;

  ::hover {
    color: pink;
  }

  p {
    margin-bottom: 55px;
  }
\`;

export const foo = css\`
  margin-bottom: 100px;
\`;
"
`;

exports[`transform pesudo elements/classes nested 1`] = `
"import { css } from 'emotion';

export const buttonCopy = css\`
  background: none;
  border: 0;

  &:focus,
  &:hover {
    outline: 0;
  }
\`;

export const domainIcon = css\`
  width: 14px;
  height: 14px;
\`;
"
`;

exports[`transform pesudo elements/classes nested pseudo 1`] = `
"import { css } from 'emotion';

export const buttonCopy = css\`
  display: flex;
  cursor: pointer;

  &:hover {
    \${buttonIcon}
  }
\`;

export const buttonIcon = css\`
  opacity: 1;
  transform: translateX(0);
\`;
"
`;

exports[`transform placeholder 1`] = `
"import { css } from 'emotion';

const messageShared = css\`
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
\`;

export const message = css\`
  \${messageShared};
\`;

export const success = css\`
  \${messageShared};

  border-color: green;
\`;
"
`;

exports[`transform sass vars to import 1`] = `
"import { css } from 'emotion';
import { variables as vars } from '@domain-group/fe-brary';

export const button = css\`
  color: \${vars.colour.primaryDark};
  display: flex;
\`;

export const bar = css\`
  font-size: \${vars.font.h6FontSize};
\`;
"
`;

exports[`transform simple class no vars 1`] = `
"import { css } from 'emotion';

export const button = css\`
  display: inline-flex;
  align-items: center;
  justify-content: center;
\`;
"
`;

exports[`transform top level vars 1`] = `
"import { css } from 'emotion';

const fooBarBaz = '42px';
"
`;

exports[`transform vanilla css media query 1`] = `
"import { css } from 'emotion';

export const auctionsLabel = css\`
  display: none;

  @media (min-width: 100px) {
    display: inline;
  }
\`;
"
`;
